--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-queo loco
-
-░░░░██ ]▄▄▄▄▄▄▃
-▂▄▅█████▅▄▃▂
-I█████████████].
-◥⊙▲⊙▲⊙▲⊙▲⊙◤
-
-viva pokemon
-
+Holaaaa, te hablo del espacio exterior :O
