--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>My portfolio</title>
   </head>
   <body>
-    <p>Holaaaa world</p>
+    <!-- Begin Hero Header -->
+    <header class="hero-box">
+      <section class="hero-image-box">
+        <video
+          class="hero-video"
+          src="video/Aho Girl Daga Kotoaru!.mp4"
+          autoplay
+          muted
+          loop
+        ></video>
+      </section>
+      <section class="hero-text-box">
+        <h1 class="hero-heading">Creativity Like a Gundam</h1>
+        <p class="hero-text">Vuela como todo un campeon</p>
+      </section>
+    </header>
+    <!-- End Hero Header -->
   </body>
 </html>
