made about section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <title>My portfolio</title>
   </head>
   <body>
@@ -59,6 +60,46 @@
       </div>
     </section>
     <!-- End Portfolio -->
+
+    <!-- Begin About -->
+    <section class="about-container">
+      <section class="about-text">
+        <h1>Me llamo nicolas y soy un editor a tiempo completo</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+          suscipit nihil omnis quibusdam ipsa consequatur, beatae voluptas
+          voluptatibus exercitationem minus, soluta sequi pariatur deleniti
+          aperiam.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+          repudiandae doloremque iste debitis quam totam tenetur! Ab, labore
+          adipisci provident excepturi distinctio dolore numquam, voluptatibus
+          odio reprehenderit sapiente quidem nihil?
+
+          <a href="mailto:email@example.com">email me</a>email@example.com
+        </p>
+        <div class="about-social">
+          <a href="https://twitter.com/ry_pury" aria-label="Link to twitter">
+            <i class="fab fa-twitter" aria-hidden="True"></i>
+          </a>
+          <a href="https://instagram/lniiikko" aria-label="Link to IG">
+            <i class="fab fa-instagram" aria-hidden="True"></i>
+          </a>
+          <a href="https://linkedin/in/nikolas" aria-label="Link to Linkedin">
+            <i class="fab fa-linkedin" aria-hidden="True"></i>
+          </a>
+          <a href="https://github.com//Nikoa0" aria-label="Link to Github">
+            <i class="fab fa-github" aria-hidden="True"></i>
+          </a>
+        </div>
+      </section>
+      <section class="about-image">
+        <img src="img/quagsire.jfif" alt="Niko profile picture" />
+      </section>
+    </section>
+
+    <!-- End About -->
     <script src="js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({ loop: true });
