added about page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
-    <title>My portfolio</title>
+    <title>Mi portafolio</title>
   </head>
   <body>
+    <!-- Begin Top Nav -->
+    <nav id="top-nav-bar" class="nav-bar top-nav">
+      <h1 class="logo"><a href="index.html">Nikko</a></h1>
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item social-nav-item">
+          <a href="https://twitter.com/ry_pury" aria-label="Link to twitter">
+            <i class="fab fa-twitter" aria-hidden="True"></i>
+          </a>
+        </li>
+        <li class="nav-item social-nav-item">
+          <a href="https://instagram/lniiikko" aria-label="Link to IG">
+            <i class="fab fa-instagram" aria-hidden="True"></i>
+          </a>
+        </li>
+        <li class="nav-item social-nav-item">
+          <a href="https://linkedin/in/nikolas" aria-label="Link to Linkedin">
+            <i class="fab fa-linkedin" aria-hidden="True"></i>
+          </a>
+        </li>
+        <li class="nav-item social-nav-item">
+          <a href="https://github.com//Nikoa0" aria-label="Link to Github">
+            <i class="fab fa-github" aria-hidden="True"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- End Top Nav -->
     <!-- Begin Hero Header -->
     <header class="hero-box">
       <section class="hero-image-box">
@@ -21,8 +50,8 @@
         ></video>
       </section>
       <section class="hero-text-box">
-        <h1 class="hero-heading">Conviertete en un maestro Pokemon</h1>
-        <p class="hero-text">Capturalos a todos!</p>
+        <h1 class="hero-heading">Bienvenido a mi Portafolio!</h1>
+        <p class="hero-text">Revisa los videos que tengo editados!</p>
         <p>
           <a href="#portfolio">
             <button type="button" class="hero-button">Apretame</button>
@@ -33,7 +62,7 @@
     <!-- End Hero Header -->
 
     <!-- Begin Portfolio -->
-    <section id="portfolio" class="portfolio container">
+    <section id="portfolio" class="portfolio container section-stop">
       <h1>Portafolio</h1>
       <section class="portfolio-gallery"></section>
       <div class="gallery-item">
@@ -62,7 +91,7 @@
     <!-- End Portfolio -->
 
     <!-- Begin About -->
-    <section class="about-container">
+    <section id="about" class="about-container section-stop">
       <section class="about-text">
         <h1>Me llamo nicolas y soy un editor a tiempo completo</h1>
         <p>
@@ -100,6 +129,28 @@
     </section>
 
     <!-- End About -->
+
+    <!-- Begin Footer -->
+
+    <!-- End Footer -->
+
+    <script>
+      window.onscroll = function () {
+        scrollfunction();
+      };
+
+      function scrollfunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          document.getElementById("top-nav-bar").style.background = "#000000";
+        } else {
+          document.getElementById("top-nav-bar").style.background = "none";
+        }
+      }
+    </script>
+
     <script src="js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({ loop: true });
